[package]
name = "librwm"
version = "0.1.0"
authors = ["Kloenk <kloenk@kloenk.de>"]
edition = "2018"
build = "build.rs"

[lib]
name = "rwm"
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"

[build-dependencies]
cbindgen = "0.14.0"
